fixed the few layout issues

--- a/Beta/app/assets/stylesheets/projects.scss
+++ b/Beta/app/assets/stylesheets/projects.scss
@@ -304,6 +304,7 @@ input.send-message-button {
 .table-head-specs {
 	text-align : right;
 	padding-right : 15px;
+	max-width : 100px;
 }
 
 
